# BrotherLabelPrinter

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  font.sh  install.sh  label-printer.service  main.py  requirements.txt  setup.sh
.github/workflows/: cicd.yml
api/: PrinterManager.py  README.md  __init__.py  config.py  config.yaml  main.py  print.py  print_request.py  printer_manager.py  requirements.txt
api/routes/: print.py
backend/: config.py  docker-compose.yml  main.py  print_request.py
backend/routes/: print.py
components/: media_widget.py
components/device/: connection_selector_widget.py  connection_widget.py  device_selector_widget.py  device_widget.py  status_widget.py
components/label/: label_settings_widget.py  label_widget.py  text_label_widget.py
components/label/settings/: font.py  padding.py
frontend/: homepage.html  index.html  styles.css
gui/: main.py
gui/components/: media_widget.py
gui/components/device/: connection_widget.py  device_widget.py  (+2 more)
motor/: .gitignore  README.md  constants.py  motor.py  pyproject.toml
motor/servo_motor_control/: __init__.py  constants.py  motor.py
print/: connection.py  device.py  font.py  usb.py
print/usb/: __init__.py  errors.py
server/: api.sh  setup.sh
web/: .env.example  Dockerfile  README.md  config.py  main.py  print_request.py  printer_manager.py  requirements.txt  settings.py
web/interfacing/: font.py  motor_control.py  printer_manager.py
web/requests/: print_request.py
web/routes/: config.py  print.py
web/static/: index.html  scripts.js  styles.css
(+3 files in other folders)
